Clears up the portfolio grid for mobile, fixes on mobile menu

--- a/src/layouts/sass/_big-picture.scss
+++ b/src/layouts/sass/_big-picture.scss
@@ -266,4 +266,9 @@ footer {
       }
     }
   }
+ main.body, .main-body-portfolio { 
+   h1 {
+    font-size: 2.0rem;
+   }
+  }
 }
